# r-epaxos

./: Cargo.toml  rust-toolchain.toml
.github/workflows/: ci.yml
epaxos/: Cargo.toml
epaxos/examples/: kv.rs
epaxos/src/: client.rs  config.rs  error.rs  execute.rs  lib.rs  main.rs  message.rs  server.rs  types.rs  util.rs
epaxos/src/types/: cmd.rs  id.rs  instance.rs  lb.rs  mod.rs  replica.rs  space.rs
pro-macro/: Cargo.toml
pro-macro/src/: lib.rs
pro-macro/tests/: success.rs
src/: error.rs  lib.rs  message.rs  types.rs
